[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-hashcash = "0.1"
md5 = "0.7.0"

[[bin]]
name = "server"
path = "src/linked_version/main.rs"

[[bin]]
name = "client_only"
path = "src/separated_version/main.rs"

[[bin]]
name = "challenge_md5"
path = "src/separated_version/challenge_md5.rs"
